2009-01-16  Sancho Lerena <slerena@artica.es>

	* pandora_wmi, pandora_plugin, pandora_recon: Updates merged from
	2.0 version. Different small fixes and improved performance.

	* DB.pm: Support for fixes in wmi/plugin server. Call of enterprise 
	function pandora_mcast_change_report() is done now on real status change
	code not in alert. Added update_on_error() function to update status table
	when remote modules cannot init (update last_try field to avoid unnecesary
	attempts).

	* Config.pm: Build update, some stuff cleaned. Server startup info is show
	only when verbose level is activated.
	
	* pandora_network: Startup messages are not shown if verbose < 5.

2009-01-16  Raul Mateos <raulofpandora@gmail.com>
	
	* lib/PandoraFMS/Config.pm: Updated Build and Headers.
	Changed some texts.

2009-01-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Several fixes.

2009-01-15  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: min_alerts now works as expected.

2009-01-15  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Partially rewrote the alert core to support the
	  new DB schemas. Compound alerts have been temporarily disabled.
	  Rewrote alert macro substitution code.

	* lib/PandoraFMS/Tools.pm,
	  bin/pandora_snmpconsole: Aesthetic changes to enterprise code.

	* lib/PandoraFMS/Config.pm,
	  bin/pandora_network: Added support for UDP multicast status reports
	  (enterprise version).

2009-01-14  Sancho Lerena <slerena@artica.es>

	* DB.pm: Solved an invalid reference to hash variable affecting to
	postprocess calculation.

	* pandora_recon: Now is compatible with the latest changes. Solved a
	problem in eval() block. Also fixed a old bug mixing network profiles.
	This fix will be ported to stable version ASAP.


2009-01-12  Sancho Lerena <slerena@artica.es>

	* Makefile.PL: Path to libs was wrong. Fixed.
	
	* pandora_db.pl: Fixed small bug.

2009-01-12  Sancho Lerena <slerena@artica.es>
